sfdx-source/common-base/main/schema/objects/DomainProcess__mdt/DomainProcess__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type is responsible for controlling the dependency injection of domain criteria and actions.</description>
    <label>Domain Process</label>
    <pluralLabel>Domain Processes</pluralLabel>
</CustomObject>