sfdx-source/common-base/main/schema/objects/DomainProcess__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of why this is present.</description>
    <inlineHelpText>Brief description of why this is present.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>