sfdx-source/common-base/main/schema/objects/DomainProcess__mdt/fields/Domain_Process_SObject_Binding__c.field-meta.xml
<CustomField>
    <fullName>Domain_Process_SObject_Binding__c</fullName>
    <label>Domain Process SObject Binding</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Domain_Processes</relationshipLabel>
    <relationshipName>Domain_Processes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>