sfdx-source/common-base/main/schema/objects/DomainProcess__mdt/fields/RelatedDomain__c.field-meta.xml
<CustomField>
    <fullName>RelatedDomain__c</fullName>
    <description>The "domain" that this process arrangement is related to.  Usually this is the related SObject API name, especially in a Trigger Execution, but it is not limited to just that.</description>
    <inlineHelpText>The "domain" that this process arrangement is related to.  Usually this is the related SObject API name, especially in a Trigger Execution, but it is not limited to just that.</inlineHelpText>
    <label>Related Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>