sfdx-source/common-base/main/schema/objects/DomainProcess__mdt/fields/TriggerOperation__c.field-meta.xml
<CustomField>
    <fullName>TriggerOperation__c</fullName>
    <description>For a process context of "trigger execution", you need to specify which trigger operation this criteria or action would respond to.</description>
    <inlineHelpText>For a process context of "trigger execution", you need to specify which trigger operation this criteria or action would respond to.</inlineHelpText>
    <label>Trigger Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AfterDelete</fullName>
                <default>true</default>
                <label>After Delete</label>
            </value>
            <value>
                <fullName>AfterInsert</fullName>
                <label>After Insert</label>
            </value>
            <value>
                <fullName>AfterUndelete</fullName>
                <label>After Undelete</label>
            </value>
            <value>
                <fullName>AfterUpdate</fullName>
                <label>After Update</label>
            </value>
            <value>
                <fullName>BeforeDelete</fullName>
                <label>Before Delete</label>
            </value>
            <value>
                <fullName>BeforeInsert</fullName>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>BeforeUpdate</fullName>
                <label>Before Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>