sfdx-source/common-base/main/schema/objects/DomainProcess__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>ClassToInject__c</columns>
    <columns>IsActive__c</columns>
    <columns>OrderOfExecution__c</columns>
    <columns>PreventRecursive__c</columns>
    <columns>ProcessContext__c</columns>
    <columns>Domain_Process_SObject_Binding__c</columns>
    <columns>RelatedDomain__c</columns>
    <columns>DomainMethodToken__c</columns>
    <columns>TriggerOperation__c</columns>
    <columns>Type__c</columns>
    <columns>ExecuteAsynchronous__c</columns>
    <columns>Description__c</columns>
    <columns>LogicalInverse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>